--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -825,7 +825,7 @@ margin-left: 38px;
       </ul>
 
 
-          <p class='mrgn-tp-md"><span class="fas fa-ban mrgn-rght-sm text-danger fa-lg"></span><strong>Note:</strong> A trust account number (TAN) cannot be used to file Underused Housing Tax returns.</p>
+          <p class="mrgn-tp-md"><span class="fas fa-ban mrgn-rght-sm text-danger fa-lg"></span><strong>Note:</strong> A trust account number (TAN) cannot be used to file Underused Housing Tax returns.</p>
    
 
 
