--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -895,8 +895,8 @@ margin-left: 38px;
 			<summary>Section 1 - Multiple properties</summary>
 			<p>If you own more than one residential property in Canada on December 31, you must file a separate return for each property.</p>
 		</details>
-		<br>
-		<p>If you choose to make an election, you may only designate one residential property.</p>
+		
+		<p class="mrgn-tp-md">If you choose to make an election, you may only designate one residential property.</p>
 		<p>You cannot elect to designate different residential properties to claim multiple exemptions based on your, or your spouse's or common-law partner's, personal occupancy of the properties.</p>
 		<details>
 			<summary>Section 2 – Election to designate a residential property</summary>
