--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -769,14 +769,14 @@
 </li>
 
 <li class="code-num">
- <details>  <summary>Code 107 – Payments from a wage-loss replacement plan <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd107">Report payments you made under a wage-loss replacement plan using code 107.</p>
+ <details>  <summary>Code 107 – Payments from a wage-loss replacement plan </summary> 
+  <p id="cd107">Report payments you made under a wage-loss replacement plan where you do not have to withhold CPP or EI premiums (or both) using code 107.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/payments-wlrp.html">Payments from wage-loss replacement plans</a></p> 
 
   </details> 
   </li>
 <li class="code-num">
- <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer <span class="label label-success">Rewrite done</span></summary> 
+ <details >  <summary>Code 108 – Lump-sum payments from a registered pension plan (RPP) that you cannot transfer </summary> 
   <p id="cd108">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Registered pension plan">RPP</abbr> using code 108 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 <h4>Specific situation </h4>
 <dl class="dl-horizontal">
@@ -787,45 +787,49 @@
 <li>from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 108, use <a href="#cd180">code 180</a></li> 
 <li>that is not required to be reported elsewhere using code 108, use <a href="#cd158">code 158</a></li>
 </ul>
-
 </dd>
-
 </dl>
-
-
  </details>
 </li>
 
 <li class="code-num"> 
- <details >  <summary>Code 109 – Periodic payments from an unregistered plan <span class="label label-success">Rewrite done</span></summary> 
+ <details >  <summary>Code 109 – Periodic payments from an unregistered plan </summary> 
 <p  id="cd109">Report periodic payments from pension benefits you paid from an unregistered pension fund or plan using code 109. </p> 
 <p><strong>Do not</strong> report this amount using box 016.</p>
+<h4>Specific situation </h4>
+<dl class="dl-horizontal">
+
+<dt>Non-residents</dt>
+<dd><p><strong>Do not</strong> report periodic payments to a Canadian resident under an unregistered pension plan for services that the person rendered in a period throughout which the person did not reside in Canada using code 109, use <a href="#bx016">box 016</a>.</p>
+</dd>
+</dl>
+
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
  </details> 
  </li>
 <li class="code-num">
- <details >  <summary>Code 110 – Lump-sum payments accrued to <span class="nowrap">December 31, 1971</span> <span class="label label-success">Rewrite done</span></summary> 
+ <details >  <summary>Code 110 – Lump-sum payments accrued to <span class="nowrap">December 31, 1971</span> </summary> 
   <p id="cd110">Report lump-sum payments you made out of <abbr title="registered pension plan">RPP</abbr>s and <abbr title="Deferred profit sharing plan">DPSP</abbr>s accrued to December 31, 1971 using code 110 <strong>and</strong> <a href="#bx018">box 018</a>. </p>
 
  </details> 
  </li>
 <li class="code-num">
- <details >  <summary>Code 111 – Income averaging annuity contracts (IAAC) <span class="label label-success">Rewrite done</span></summary> 
+ <details >  <summary>Code 111 – Income averaging annuity contracts (IAAC) </summary> 
   <p id="cd111">Report annuity payments you made under an <abbr title="income-averaging annuity contract">IAAC</abbr> using code 111 <strong>and</strong> <a href="#bx024">box 024</a>. </p>
 
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments <span class="label label-warning">Jeremiah</span></summary> 
+ <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments </summary> 
   <p id="cd115">Report instalment or annuity payments you made under a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 115 <strong>and</strong> <a href="#bx024">box 024</a>. </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>         
 
  </details> 
 </li>
 <li class="code-num">
- <details >  <summary>Code 116 – Medical travel assistance <span class="label label-warning">Jeremiah</span></summary> 
-   <p id="cd116">Report the amount of the <strong>medical portion only</strong> you paid for medical travel assistance in a prescribed zone, using code 116 <strong>and</strong> the total amount of the travel benefit using <a href="#cd028">code 028</a>.</p>
+ <details >  <summary>Code 116 – Medical travel assistance</summary> 
+   <p id="cd116">Report the amount of the <strong>medical travel portion only</strong> you paid for medical travel assistance in a prescribed zone, using code 116 <strong>and</strong> the total amount of the travel benefit using <a href="#cd028">code 028</a>.</p>
 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
 
