--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -836,7 +836,7 @@
  </details> 
  </li>
 <li class="code-num">
-<details >  <summary>Code 117 – Loan benefits <span class="label label-warning">Jeremiah</span></summary> 
+<details >  <summary>Code 117 – Loan benefits </summary> 
   <p id="cd117">Report the taxable loan benefit you provided to a person or partnership that was a shareholder using code 117.</p>
 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/loans.html">Loans and employee debt</a></p>
@@ -844,13 +844,13 @@
  </details> 
 </li>
 <li class="code-num">
-<details ><summary>Code 118 – Medical premium benefits <span class="label label-success">Rewrite done</span> </summary> 
+<details ><summary>Code 118 – Medical premium benefits </summary> 
 <p id="cd118">Report the premiums that you paid as contribution to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee using code 118.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#provincial">Insurance plans</a></p>	 
 </details> 
 </li>
 <li class="code-num">
-<details> <summary>Code 119 – Premiums paid to a group term life insurance plan <span class="label label-success">Rewrite done</span> </summary> 
+<details> <summary>Code 119 – Premiums paid to a group term life insurance plan </summary> 
 <p id="cd119">Report the premiums that you paid to a group term life insurance plan on behalf of a <strong>former or retired</strong> employee using code 119.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#life">Insurance plans</a></p>
 
@@ -858,27 +858,27 @@
  </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 122 – RESP accumulated income payments paid to other <span class="label label-success">Rewrite done</span></summary> 
-<p id="cd122">Report accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner  deceased using code 122 <strong>and</strong> <a href="#cd040">code 040</a>.</p> 
+<details>  <summary>Code 122 – RESP accumulated income payments paid to other </summary> 
+<p id="cd122">Report accumulated income payments you made to someone else because the subscriber, the subscriber's spouse or common-law partner was deceased using code 122 <strong>and</strong> <a href="#cd040">code 040</a>.</p> 
 
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 123 – Payments from a revoked DPSP <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 123 – Payments from a revoked DPSP </summary> 
   <p id="cd123">Report payments you made from a revoked <abbr title="deferred profit-sharing plan">DPSP</abbr> using code 123.</p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/resp.html"> Payments from a registered education savings plan (RESP)</a></p>
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 124 – Board and lodging at special work sites <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 124 – Board and lodging at special work sites </summary> 
   <p  id="cd124">Report the tax-exempt board, lodging and housing at special work sites using code 124 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd028">code 028</a>. </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
 
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 125 – Disability benefits paid out of a superannuation or pension plan <span class="label label-success">Rewrite done</span></summary> 
- <p  id="cd125">Report any disability benefits paid out of a superannuation or pension plan using code 125.</p> 
+ <details>  <summary>Code 125 – Disability benefits paid out of a superannuation or pension plan </summary> 
+ <p  id="cd125">Report any disability benefits not paid as a life annuity out of a superannuation or pension plan using code 125.</p> 
  
 <p><strong>Do not</strong> report this amount using box 016.</p> 
 <h4>Specific situation </h4>
@@ -892,14 +892,14 @@
 </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 126 – Pre-1990 past service contributions while a contributor <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 126 – Pre-1990 past service contributions while a contributor </summary> 
   <p id="cd126">Report the amount for past service contributions for 1989 or earlier years while a contributor using code 126  <strong>and</strong> <a href="#cd032">code 032</a></p> 
 
 
 </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 127 – Veterans' benefits <span class="label label-success">Rewrite done</span></summary> 
+ <details>  <summary>Code 127 – Veterans' benefits </summary> 
  <p  id="cd127">Report the sum of the following amounts using code 127: </p>
 <ul><li>Amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well being Act (other than an amount determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of the Veterans Well being Act, as modified where applicable, under Part 5 of that Act)</li>
 <li>Amounts paid in the year that were payable under any of subsections 99(6), 109(1) and 115(5) and sections 124 to 126 of the Veterans Well-being Act</li></ul>
@@ -907,25 +907,25 @@
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 128 – Veterans’ benefits eligible for pension splitting <span class="label label-success">Rewrite done</span></summary> 
+ <details>  <summary>Code 128 – Veterans’ benefits eligible for pension splitting </summary> 
   <p  id="cd128">Report the amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well-being Act, if the amount is determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of that Act (as modified, where applicable, under Part 5 of that Act) using code 128 <strong>and</strong> <a href="#bx016">box 016</a>. </p>
  </details>
 </li>
 <li class="code-num">
- <details>  <summary>Code 129 – Tax deferred cooperative share <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 129 – Tax deferred cooperative share </summary> 
   <p  id="cd129">Report all tax deferred cooperative shares issued by an agricultural cooperative in the year using code 129.</p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p> 
 </details>
  </li>
 <li class="code-num">
- <details>  <summary>Code 130 – Apprenticeship incentive grant, Apprenticeship Incentive Grant for Women or Apprenticeship completion grant <span class="label label-warning">Jeremiah</span></summary> 
-  <p  id="cd130">Report the amount of apprenticeship incentive grants or apprenticeship incentive grants for women you paid to the registered apprentice who has successfully completed their first or second-year level (or equivalent) of their apprenticeship program in a Red Seal trade using code 130.</p> 
-  <p>Also report the amount of apprenticeship completion grants you paid to the registered apprentice who has completed their apprenticeship training in a Red Seal trade.</p> 
+ <details>  <summary>Code 130 – Apprenticeship incentive grant, Apprenticeship Incentive Grant for Women or Apprenticeship completion grant </summary> 
+  <p  id="cd130">Report the amount of Apprenticeship Incentive Grants or Apprenticeship Incentive Grants for Women you paid to the registered apprentice who has successfully completed their first or second-year level (or equivalent) of their apprenticeship program in a Red Seal trade using code 130.</p> 
+  <p>Also report the amount of Apprenticeship Completion Grants you paid to the registered apprentice who has completed their apprenticeship training in a Red Seal trade.</p> 
 <p>Learn more from Service Canada: <a href="https://www.canada.ca/en/services/jobs/training/support-skilled-trades-apprentices/grants.html">Apprenticeship Grants</a> or call <strong>1-866-742-3644</strong> </p> 
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 131 – Registered disability savings plan <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 131 – Registered disability savings plan </summary> 
   <p  id="cd131">Report payments you made under a registered disability savings plan (<abbr title="Registered disability savings plan">RDSP</abbr>) to a beneficiary using code 131.</p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/rdsp.html">Payments from a registered disability savings plan (RDSP)</a></p>	 
  
