--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -932,14 +932,14 @@
 </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 132 – Wage earner protection program <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd132">Report payments you made for wages to individuals of an employer who is bankrupt, subject to a receivership, or other WEPP qualifying insolvency proceedings using code 132.</p> 
+<details>  <summary>Code 132 – Wage earner protection program </summary> 
+  <p id="cd132">Report payments you made for wages to workers of an employer who is bankrupt, subject to a receivership, or other WEPP qualifying insolvency proceedings using code 132.</p> 
 <p>Learn more from Service Canada: <a href="https://www.canada.ca/en/employment-social-development/services/wage-earner-protection.html">Wage Earner Protection Program</a> or call <strong>1-866-683-6516</strong> 
  </details> 
  </li>
 <li class="code-num">
-<details >  <summary>Code 133 – Variable pension benefits <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd133">Report variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>) paid out of a money purchase from a <abbr title="registered pension plan">RPP</abbr> and a <abbr title="pool registered pension plan">PRPP</abbr> using code 133.</p>
+<details >  <summary>Code 133 – Variable pension benefits </summary> 
+  <p id="cd133">Report variable payment life annuity (<abbr title="Variable payment life annuity">VPLA</abbr>) paid out of a <abbr title="pool registered pension plan">PRPP</abbr> and money purchase <abbr title="registered pension plan">RPP</abbr> using code 133.</p>
 <p><strong>Do not</strong> report this amount using box 024.</p>
 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
@@ -948,7 +948,7 @@
  </li>
 
 <li class="code-num">
-<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-success">Rewrite done</span></summary> 
+<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount </summary> 
   <p  id="cd134">Report the amount of the taxable benefit you paid during the exempt period to a beneficiary who is a resident of Canada using code 134.</p>
 
 
@@ -957,9 +957,9 @@
 </li>
 
 <li class="code-num">
- <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans <span class="label label-success">Rewrite done</span> </summary> 
- <p  id="cd135">Report the premiums that you paid to a private health services plans on behalf of a <strong>former or retired</strong> employee using code 135.</p>
-<p>The use of code 135 is optional. If you do not use this code, the CRA may ask the former or retired employee to provide supporting documents.</p>
+ <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans  </summary> 
+ <p  id="cd135">Report the premiums that the recipient paid to a private health services plans of a <strong>former or retired</strong> employee using code 135.</p>
+<p>The use of code 135 is optional. If you do not use this code, the CRA may ask the recipient to provide supporting documents.</p>
 <p>This is considered a qualifying medical expense and the recipient can claim the deduction on their income tax and benefit return. </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Insurance plans</a></p>	
  </details> 
