--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -965,15 +965,16 @@
  </details> 
 </li>
 <li class="code-num">
- <details><summary>Code 136 – Parents of murdered or missing children/parents of young victims of crimes <span class="label label-warning">Jeremiah</span></summary> 
+ <details><summary>Code 136 – Parents of murdered or missing children/parents of young victims of crimes </summary> 
   <p  id="cd136">Report the amount you paid to the beneficiary from the Canadian Benefit for Parents of Young Victims of Crime using code 136.</p>
- 
+<p>Continue to report the amounts paid out using code 139 if the incident occurred before September 30, 2018.  </p>
+
 <p>Learn more from Employment and Social Development Canada: <a href="https://www.canada.ca/en/employment-social-development/programs/ei/ei-list/ei-employers-parents-young-victims-crime.html">Canadian Benefit for Parents of Young Victims of Crime</a></p>
 
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 144 – Indian (exempt income) – Other income <span class="label label-success">Rewrite done</span></summary> 
+ <details>  <summary>Code 144 – Indian (exempt income) – Other income </summary> 
   <p  id="cd144">Report the tax-exempt income that is not reported elsewhere on the T4A slip that you paid to a recipient who is registered, or entitled to be registered under the Indian Act using code 144.</p> 
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
 <p><strong>Do not</strong> report this amount using any boxes.</p> 
@@ -983,7 +984,7 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 146 – Indian (exempt income) – Pension or superannuation <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 146 – Indian (exempt income) – Pension or superannuation </summary> 
 <p  id="cd146">Report the tax-exempt income from pension or superannuation you paid to a recipient who is registered, or entitled to be registered under the Indian Act using code 146.</p>
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
 <p><strong>Do not</strong> report this amount using box 016.</p> 
@@ -992,7 +993,7 @@
 </li>
 
 <li class="code-num">
- <details>  <summary>Code 148 – Indian (exempt income) – Lump-sum payments <span class="label label-success">Rewrite done</span></summary> 
+ <details>  <summary>Code 148 – Indian (exempt income) – Lump-sum payments </summary> 
 <p  id="cd148">Report the tax-exempt income from a lump-sum payment you paid to a recipient who is registered, or entitled to be registered under the Indian Act using code 148.</p>
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
 <p><strong>Do not</strong> report this amount using box 018.</p> 
@@ -1001,34 +1002,35 @@
 </li>
 
 <li class="code-num">
- <details>  <summary>Code 150 – Labour Adjustment Benefits Act and Appropriation Acts <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 150 – Labour Adjustment Benefits Act and Appropriation Acts </summary> 
   <p  id="cd150">Report payments you made under the Labour Adjustment Benefits Act or a benefit payable under the Appropriation Acts to compensate for loss of office or employment, such as in the textile and leather-tanning industries using code 150.</p> 
 
 <p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p> 
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 152 – SUBP qualified under the Income Tax Act <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 152 – SUBP qualified under the Income Tax Act </summary> 
   <p  id="cd152">Report payments you made under a supplementary unemployment benefit plan (<abbr title="Supplementary unemployment benefit plan">SUBP</abbr>) using code 152.</p> 
+<p><strong>Do not</strong> report maternity or paternity top ups, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/subp.html">Payments from supplementary unemployment benefit plan (SUBP)</a></p>      
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 154 – Cash award or prize from payer <span class="label label-warning">Jeremiah</span></summary> 
-  <p  id="cd154">Report the amount for the gift, award or prize if you are the manufacturer and you made the payment to the dealer's employee using code 154.</p>
+ <details>  <summary>Code 154 – Cash award or prize from payer </summary> 
+  <p  id="cd154">Report the amount for the gift, award or prize if you are the manufacturer and you made the payment to the employee of a dealer using code 154.</p>
 <p><strong>Do not</strong> report if you are not the manufacturer using code 154, use <a href="#cd028">code 028</a>.<p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/gifts.html#manu2">Gifts, awards, and long-service awards</a></p> 
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 156 – Bankruptcy settlement <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 156 – Bankruptcy settlement </summary> 
   <p  id="cd156">Report payments you made as a trustee in bankruptcy to employees of a bankrupt corporation in settlement of claims filed for wages that the bankrupt employer did not pay using code 156.</p> 
 <p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p>  
 
 </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 158 – Lump-sum payments that you cannot transfer that are not reported elsewhere <span class="label label-success">Rewrite done</span></summary> 
+<details>  <summary>Code 158 – Lump-sum payments that you cannot transfer that are not reported elsewhere </summary> 
   <p id="cd158">Report lump-sum payments you made that you <strong>cannot transfer</strong> that are not reported elsewhere using code 158 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 
 <h4>Specific situation </h4>
@@ -1045,14 +1047,14 @@
 </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor <span class="label label-success">Rewrite done</span></summary> 
+<details>  <summary>Code 162 – Pre-1990 Past services contributions while not a contributor </summary> 
 <p id="cd162">Report the amount for past service contributions for 1989 or earlier years while not a contributor using code 162  <strong>and</strong> <a href="#cd032">code 032</a></p> 
 
  </details> 
 </li>
 
 <li class="code-num">
- <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer </summary> 
  <p id="cd180">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 <p>You also have to report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 
@@ -1075,17 +1077,17 @@
 </li>
 
 <li class="code-num">
-<details>  <summary>Code 190 – Lump-sum payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
-<p  id="cd190">Report lump-sum payments from pension benefits you paid from an unregisted pension fund or plan using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
+<details>  <summary>Code 190 – Lump-sum payments from an unregistered plan </summary> 
+<p  id="cd190">Report lump-sum payments from pension benefits you paid from an unregistered pension fund or plan using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 194 – PRPP payments <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 194 – PRPP payments </summary> 
   <p  id="cd194">Report the amount of the annuity payments from taxable income or withdrawals from a pooled registered pension plan (<abbr title="Pooled registered pension plan">PRPP</abbr>) at any age using code 194 <strong>and</strong> <a href="#bx024">box 024</a>.</p> 
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 195 – Indian (exempt income) – PRPP payments <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 195 – Indian (exempt income) – PRPP payments </summary> 
   <p id="cd195">Report the tax-exempt income from a pooled registered pension plan (<abbr title="Pool registered pension plan">PRPP</abbr>) you paid to a recipient who is registered, or entitled to be registered under the Indian Act using code 195.</p> 
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
 <p><strong>Do not</strong> report this amount using box 018.</p> 
@@ -1094,32 +1096,32 @@
  </details> 
  </li>
 <li class="code-num">
- <details>  <summary>Code 196 – Tuition assistance for adult basic education <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 196 – Tuition assistance for adult basic education </summary> 
   <p id="cd196">Report the amount of funding or other financial assistance you paid on behalf of the individual for tuition fees for the individual’s adult basic education training provided under a program established under the authority of the Department of Employment and Social Development Act (such as the Canada Job Grant program) using code 196 <strong>and</strong> <a href="#cd105">code 105</a>. </p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p>
  </details> 
 </li>
 <li class="code-num">
-<details>  <summary>Code 200 – Provincial/Territorial COVID-19 financial assistance payments <span class="label label-warning">Jeremiah</span></summary> 
+<details>  <summary>Code 200 – Provincial/Territorial COVID-19 financial assistance payments </summary> 
 <p id="cd200">Report amounts that were paid as financial assistance by a provincial or territorial government to support individuals affected by COVID-19 and that are taxable under subparagraphs 56(1)(r)(i) or (iv), or clause 56(1)(r)(iv.1)(E) of the Income Tax Act, minus any amounts repaid within the same tax year using code 200.</p>
 <p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p>  
 </details> 
 </li>
 <li class="code-num">
-<details>  <summary>Code 201 – Repayment of COVID-19 financial assistance <span class="label label-warning">Jeremiah</span></summary> 
+<details>  <summary>Code 201 – Repayment of COVID-19 financial assistance </summary> 
    <p id="cd201">Report the amount of federal, provincial or territorial COVID-19 financial assistance payments that were repaid in the year in respect of an overpayment of federal, provincial or territorial COVID-19 financial assistance payments received in a prior year using code 201. </p>
 <p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p> 
  </details> 
 </li>
 <li class="code-num">
- <details > <summary>Code 205 – One-time payment for older seniors <span class="label label-warning">Jeremiah</span></summary> 
- <p id="cd205">Report the one-time payment made to older seniors using code 205.</p>
+ <details > <summary>Code 205 – One-time payment for older seniors </summary> 
+ <p id="cd205">Report the one-time supplementary OAS payment made to older seniors made in 2011 or 2012 using code 205.</p>
 <p><strong>Do not</strong> report this payment using the T4A(OAS) slip.</p> 
 <p>Learn more from Employment and Social Development Canada: <a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/old-age-security/one-time-payment-older-seniors.html"> One-time payment for older seniors</a></p>
    </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 210 – Postdoctoral Fellowship Income <span class="label label-warning">Jeremiah</span></summary> 
+ <details>  <summary>Code 210 – Postdoctoral Fellowship Income </summary> 
  <p id="cd210">Report the full amount of the postdoctoral fellowship income you paid using code 210 <strong>and</strong> <a href="#cd105">code 105</a>. </p>
  <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> 
 </details>
