--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -165,7 +165,7 @@
                         </tr>
                                               
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/employees-profit-sharing-plan.html">Payments from an employees profit sharing plan (EPSP)</a> </td>
+                           <td><a href="epsp.html">Payments from an employees profit sharing plan (EPSP)</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
 		
