--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -1072,7 +1072,7 @@
 </dd>
 
 </dl>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/epsp.html">Payments from an employees profit sharing plan (EPSP)</a></p>
 </details> 
 </li>
 
