--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -215,14 +215,14 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
 		   <p><strong>Renovation 1</strong></p>
 		   <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
 <li><span class="fa-stack text-success"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">$15,000 in qualifying expenses</span></li>
-<li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">x</span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">15% (lowest personal income tax rate)</span></li>
+<li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">x</span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">15%</span></li>
 <li><span class="fas  fa-li"><span class="fa-lg">=</span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success"><span class="fas fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x fa-inverse"></em></span><span class="mrgn-tp-0 text-muted h5">$2,250 refundable tax credit</span></span></li>
 </ul>
 		   
 		   		   <p><strong>Renovation 2</strong></p>
 		   <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
 <li><span class="fa-stack text-success"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">$50,000 in qualifying expenses (maximum)</span></li>
-<li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">x</span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">15% (lowest personal income tax rate)</span></li>
+<li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">x</span><span class="wb-inv">times</span></span> <span class="fa-stack text-success mrgn-bttm-sm"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">15%</span></li>
 <li><span class="fas  fa-li"><span class="fa-lg">=</span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success"><span class="fas fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x fa-inverse"></em></span><span class="mrgn-tp-0 text-muted h5">$7,500 refundable tax credit</span></span></li>
 </ul>
 		   <p><strong>Total MHRTC for 2023: $9,750</strong>
