--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -602,7 +602,7 @@
 <h4>Other information</h4>
       <li class="code-num">
 <details><summary>Code 014&nbsp;– Recipient's number <span class="label label-warning">Need to rewrite, what is needed here</span></summary> 
-  <p id="cd014">If you wish, you can enter a retiree number, an employee number, or a payroll number. In the "Other information" area, enter code&nbsp;<strong>014</strong> and the recipient's number. If you prefer, you can enter the recipient's number in the "Recipient's name" area of the T4A&nbsp;slip. The recipient address area cannot be used for this purpose.</p> 
+  <p id="cd014">If you wish, you can enter a retiree number, an employee number, or a payroll number using code 014 and the recipient's number. If you prefer, you can enter the recipient's number in the "Recipient's name" area of the T4A&nbsp;slip. The recipient address area cannot be used for this purpose.</p> 
  </details> 
 </li>
 <li class="code-num">
