--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -937,7 +937,14 @@
 <dd>Report the employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code box 14 <strong>and</strong> <a href="#cd_43">code 43</a>.</p></dd>
 
 <dt>Emergency volunteers</dt>
-<dd>Add situation</dd>
+<dd><p>Report the employment income if you hired emergency volunteers (such as firefighters, ambulance technicians, or search and rescue volunteers) and you paid:</p>
+<ul>
+	<li>An amount of more than $1,000 using code box 14</li>
+	<li>An amount of less than $1,000 using <a href="#cd_87">code 87</a></li>
+        <li>The individual other than as a volunteer for the same or similar duties, the total amount using box 14</li>
+	
+</ul>
+</dd>
 
 <dt>Employees with power saws or tree trimmers  </dt>
 <dd> <p id="trims">Report the rental payments you made to employees for the use of their own power saws or tree trimmers using box 14.</p>
