--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -328,7 +328,7 @@
 		"selector": ".code-num"
 	}'>
 
- <div class="btn-group mrgn-tp-md mrgn-bttm-md">
+ <div class="btn-group">
                <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                   &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;on&quot;}" type="button">Expand all</button>
                <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
@@ -353,6 +353,7 @@
             <p> <strong>Do not enter </strong>titles, such as Director, Mr., or Mrs. </p>
             <p>Enter the recipient’s home address, including the province or territory, the postal code and the country.</p>
 
+<p><strong>Do not</strong> use the recipient's address area to enter the recipient's number, use <a href="#cd_14">code 14</a> or the recipient's name area.</p>
 
                 </details>
  </li>
@@ -463,19 +464,19 @@
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Single payments</dt>
-<dd> <p id="bx018">Report the taxable portion of a single payment out of a <strong>pension fund or plan</strong>strong> using box 018, including any single payment resulting from a:</p>
+<dd> <p id="bx018">Report the taxable portion of a single payment out of a <strong>pension fund or plan</strong> using box 018, including any single payment resulting from a:</p>
 <ul>
  <li>Withdrawal from the plan, retirement from employment, or death of an employee or former employee</li>
 <li>Termination of, amendment to, or modification of the plan</li>
 <li>Reimbursement of any over-contributions to the plan</li>
 </ul>
-<p class="mrgn-tp-md">Report the taxable portion of any single payment out of a <strong>deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>)</strong>strong> using box 018, including single payment resulting from a:.</p>
+<p class="mrgn-tp-md">Report the taxable portion of any single payment out of a <strong>deferred profit sharing plan (<abbr title="Deferred profit sharing plan">DPSP</abbr>)</strong> using box 018, including single payment resulting from a:.</p>
 <ul>
  <li>Withdrawal from the plan, retirement from employment, or death of an employee or former employee</li>
 <li>Reimbursement of any over-contributions to the plan</li>
 </ul>
 
-<p>Report the taxable portion of a <strong>lump-sum death benefit paid out of an advanced life deferred annuity (<abbr title="Advanced life deferred annuity">ALDA</abbr>)</strong>strong> using box 018.</p>
+<p>Report the taxable portion of a <strong>lump-sum death benefit paid out of an advanced life deferred annuity (<abbr title="Advanced life deferred annuity">ALDA</abbr>)</strong> using box 018.</p>
 
 </dd>
 
@@ -601,8 +602,10 @@
 
 <h4>Other information</h4>
       <li class="code-num">
-<details><summary>Code 014&nbsp;– Recipient's number <span class="label label-warning">Need to rewrite, what is needed here</span></summary> 
-  <p id="cd014">If you wish, you can enter a retiree number, an employee number, or a payroll number using code 014 and the recipient's number. If you prefer, you can enter the recipient's number in the "Recipient's name" area of the T4A&nbsp;slip. The recipient address area cannot be used for this purpose.</p> 
+<details><summary>Code 014 – Recipient's number <span class="label label-warning">Need to rewrite, what is needed here</span></summary> 
+  <p id="cd014">Enter a retiree number, an employee number, or a payroll number using code 014.</p> 
+<p>The use of code 014 is optional. </p>
+<p>You <strong>cannot</strong> use the recipient's address area to enter the recipient's number.</p>
  </details> 
 </li>
 <li class="code-num">
