--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -602,7 +602,7 @@
 
 <h4>Other information</h4>
       <li class="code-num">
-<details><summary>Code 014 – Recipient's number <span class="label label-warning">Need to rewrite, what is needed here</span></summary> 
+<details><summary>Code 014 – Recipient's number </summary> 
   <p id="cd014">Enter a retiree number, an employee number, or a payroll number using code 014.</p> 
 <p>The use of code 014 is optional. </p>
 <p>You <strong>cannot</strong> use the recipient's address area to enter the recipient's number.</p>
