--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -669,7 +669,7 @@
 <dd>Report the amount using code 032 <strong>and</strong> <a href="#cd162">code 162</a></dd>
 </dl>
 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html">Savings and pension plans</a></p>
   
  </details> 
 </li>
@@ -684,7 +684,7 @@
 <dt>Periods of leave or reduced services not under a <abbr title="Multi-employer plan">MEP</abbr></dt>
 <dd><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services <strong>not under a <abbr title="Multi-employer plan">MEP</abbr></strong> using code 034, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>. </dd>
 </dl>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/registered-plans-administrators/pspa/about-pension-adjustment.html">Pension Adjustment (PA)</a></p>         
  </details> 
  </li>
 
@@ -740,6 +740,7 @@
 <p>Learn more: <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of Charities</a></p> 
  </details> 
 </li>
+
 <li class="code-num">
  <details >  <summary>Code 102 – Lump-sum payments – non-resident services transferred under paragraph 60(j) </summary> 
   <p id="cd102">Report lump-sum payments you made for non-resident services transferred to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Simplified pension plan">SPP</abbr>, <abbr title="Pooled registered pension plan">PRPP</abbr> or <abbr title="Registered retirement savings plan">RRSP</abbr> and which were eligible to be deducted under paragraph 60(j) using code 102  <strong>and</strong> <a href="#bx018">box 018</a>.</p>
