--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -833,7 +833,7 @@
 <li class="code-num">
  <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments </summary> 
   <p id="cd115">Report instalment or annuity payments you made under a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 115 <strong>and</strong> <a href="#bx024">box 024</a>. </p>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>         
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/epsp.html"></a>Payments from a profit sharing plan </p>         
 
  </details> 
 </li>
@@ -876,7 +876,7 @@
 <li class="code-num">
  <details>  <summary>Code 123 – Payments from a revoked DPSP </summary> 
   <p id="cd123">Report payments you made from a revoked <abbr title="deferred profit-sharing plan">DPSP</abbr> using code 123.</p> 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/resp.html"> Payments from a registered education savings plan (RESP)</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/epsp.html"></a>Payments from a profit sharing plan </p>    
  </details> 
 </li>
 <li class="code-num">
@@ -896,9 +896,10 @@
 
 <dt>Disability benefits paid as a life annuity</dt>
 <dd><p><strong>Do not</strong> report <strong>disability benefits paid as a life annuity</strong> out of a superannuation or <abbr title="Registered pension plan">RPP</abbr> using code 125, use <a href="#bx016">box 016</a></p>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
+    
  </dd>
 </dl>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>   
 </details> 
 </li>
 <li class="code-num">
