--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -925,7 +925,7 @@
 <li class="code-num">
  <details>  <summary>Code 129 – Tax deferred cooperative share </summary> 
   <p  id="cd129">Report all tax deferred cooperative shares issued by an agricultural cooperative in the year using code 129.</p> 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p> 
+
 </details>
  </li>
 <li class="code-num">
@@ -938,7 +938,7 @@
 <li class="code-num">
  <details>  <summary>Code 131 – Registered disability savings plan </summary> 
   <p  id="cd131">Report payments you made under a registered disability savings plan (<abbr title="Registered disability savings plan">RDSP</abbr>) to a beneficiary using code 131.</p> 
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/rdsp.html">Payments from a registered disability savings plan (RDSP)</a></p>	 
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-disability-savings-plan-rdsp.html">Registered disability savings plan (RDSP)</a></p>	 
  
 </details> 
  </li>
